# extrapolator

./: MANIFEST.in  README.md  pyproject.toml  tox.ini
extrapolator/: __init__.py  __main__.py  extrapolator.py  test.py
extrapolator/tests/: test_placeholder.py
